Fix regression on inline button layout; try larger font to avoid triggering zoom on form on mobile

--- a/src/css/xx/components/_forms.scss
+++ b/src/css/xx/components/_forms.scss
@@ -51,6 +51,7 @@
 
     @include breakpoint-mobile {
         height: $mobile-form-element-height;
+        font-size: 16px;
     }
 
     &[readonly] {
