--- a/src/css/xx/components/_upload.scss
+++ b/src/css/xx/components/_upload.scss
@@ -226,7 +226,8 @@ $zindex-upload-drag-and-drop: 1;
             margin-top: 0;
 
             &--important {
-                width: 100%;
+                width: 48%;
+                float: right;
             }
         }
     }
